fix overflow

--- a/scss/_leads.scss
+++ b/scss/_leads.scss
@@ -20,6 +20,7 @@
         font-size: 20px;
     }
 }
+.notes-list,
 .leads,
 .popup {
     .text-input {
@@ -567,14 +568,14 @@
         @media screen and (max-width: 1340px) {
             left: -244px;
         }
-        @media screen and (max-width: 660px) {
-            position: fixed;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            height: 100vh;
-            width: 100%;
-        }
+        // @media screen and (max-width: 660px) {
+        //     position: fixed;
+        //     top: 0;
+        //     left: 0;
+        //     bottom: 0;
+        //     height: 100vh;
+        //     width: 100%;
+        // }
     }
 }
 .leads-table-row:last-child,
@@ -588,6 +589,18 @@
         }
     }
 }
+.tippy {
+    &-box {
+        max-width: 100% !important;
+        background: transparent !important;
+    }
+    &-arrow {
+        display: none !important;
+    }
+    &-content {
+        padding: 0 !important;
+    }
+}
 .notes-list {
     padding: 24px 0 24px 20px;
     background-color: $theme-white;
@@ -596,13 +609,22 @@
     opacity: 0;
     pointer-events: none;
     transition: opacity $d $f;
-    @media screen and (max-width: 660px) {
-        border-radius: 0;
-        padding: 20px 0 20px 20px;
-    }
+    // @media screen and (max-width: 660px) {
+    //     border-radius: 0;
+    //     padding: 20px 0 20px 20px;
+    // }
     &.shown {
         opacity: 1;
         pointer-events: all;
+    }
+    &.show-permanent {
+        opacity: 1;
+        pointer-events: all;
+        left: auto !important;
+        right: auto !important;
+        top: auto !important;
+        bottom: auto !important;
+        position: relative;
     }
     &-body {
         width: calc(100% - 2px);
@@ -623,10 +645,10 @@
             border: none;
             outline: none;
         }
-        @media screen and (max-width: 660px) {
-            height: auto;
-            max-height: calc(100vh - 104px);
-        }
+        // @media screen and (max-width: 660px) {
+        //     height: auto;
+        //     max-height: calc(100vh - 104px);
+        // }
     }
     &-item {
         display: flex;
@@ -684,9 +706,9 @@
         grid-template-rows: 1fr 1fr;
         column-gap: 8px;
         padding-right: 20px;
-        @media screen and (max-width: 660px) {
-            display: grid;
-        }
+        // @media screen and (max-width: 660px) {
+        //     display: grid;
+        // }
     }
     &-avatar {
         display: inline-block;
